--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="bio">
       <h1>Serly Moghadas Gholian</h1>
       <p>
-        Hey there! Thanks for visiting my website!
+        Hey!
         I’m a PhD candidate in Explainable AI for mobile traffic forecasting, at IMDEA Networks Institute and University of Carlos III of Madrid, Spain.
          My reasearch focuses on mobile networks, spatio-temporal traffic forecasting, and the application of Explainable AI (XAI) to improve the transparency and robustness of deep learning models in network management.
         </p>
