--- a/index.html
+++ b/index.html
@@ -156,6 +156,17 @@
   <div class="container" id="Publications">
     <div class="bio">
     <h2>Publications</h2>
+    <p>S. Moghadas Gholian, C. Fiandrino, and J. Widmer, “A scalable dnn training framework for traffic forecasting in mobile networks,” IEEE
+        International Conference on Machine Learning for Communication and Networking, IEEE ICMLCN 2025, Accepted for Publication.</p>
+    <p>S. Moghadas Gholian, C. Fiandrino, N. Vallina-Rodríguez, M. Fiore, and J. Widmer, “Deexp: Revealing model vulnerabilities for
+    spatio-temporal mobile traffic forecasting with explainable ai,” 6, IEEE Transactions on Mobile Computing, vol. 24, 2025, pp. 5245–5263.
+    􀃮 DOI: 10.1109/TMC.2025.3531544. </p>
+    <p>S. Moghadas, C. Fiandrino, A. Collet, G. Attanasio, M. Fiore, and J. Widmer, “Spotting deep neural network vulnerabilities in mobile
+    traffic forecasting with an explainable ai lens,” in IEEE INFOCOM 2023-IEEE Conference on Computer Communications, pp. 1–10. 􀃮 DOI:
+    10.1109/INFOCOM53939.2023.10228989. </p>
+    <p>S. Moghadas Gholian, C. Fiandrino, M. Fiore, and J. Widmer, “Exploiting explainable ai in exposing vulnerabilities of mobile 5g
+    networks,” in 13th IMDEA Networks Workshop: Quantum networks and quantum communications, 2023, pp. 1–1.</p>
+    </p>
     </div>
   </div>
   <div class="container" id="Personal">
