--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
     <div class="bio">
       <h1>Serly Moghadas Gholian</h1>
       <p>
-        Hey! 👋🏼 My name is Serly. I’m a PhD candidate in Explainable AI for mobile traffic forecasting, at IMDEA Networks Institute and University of Carlos III of Madrid, Spain.
+        Hello! 👋🏼 My name is Serly. I’m a PhD candidate in Explainable AI for mobile traffic forecasting, at IMDEA Networks Institute and University of Carlos III of Madrid, Spain.
          My reasearch focuses on mobile networks, spatio-temporal traffic forecasting, and the application of Explainable AI (XAI) to improve the transparency and robustness of deep learning models in network management.
         </p>
       <p>
-        I’m passionate about building trustworthy and robust AI systems. I’ve presented my work at top-tier conferences including
-        IEEE INFOCOM and TMC.
+        I’m passionate about building trustworthy and robust AI systems. I’ve presented my work at top-tier conferences and journals including
+        IEEE INFOCOM and IEEE Transactions on Mobile Computing.
       <p>
-        <strong>I will be graduating soon and I’m currently looking for full-time positions in AI/ML research, data science,
+        <strong> 💼 I will be graduating soon and I’m currently looking for full-time positions in AI/ML research, data science,
            or applied machine learning roles. I'm open to both industry and research positions. </strong>
       </p>
       <div class="links">
