--- a/index.html
+++ b/index.html
@@ -122,8 +122,23 @@
   <!-- Main Content -->
   <div class="container" id="about">
     <img src="serly.jpg" alt="Serly Moghadas" class="profile-pic">
+  <div class="links" style="text-align: center;">
+    <a href="https://github.com/serly93" target="_blank" class="github">
+      <i class="fab fa-github"></i> Github
+    </a>
+    <a href="cv.pdf" class="cv" download>
+      <i class="fas fa-file-alt"></i> Download CV
+    </a>
+    <a href="https://scholar.google.com/citations?user=d9KKE0cAAAAJ&hl=en" target="_blank" class="scholar">
+      <i class="fas fa-graduation-cap"></i> Google Scholar
+    </a>
+    <a href="https://www.linkedin.com/in/serly-gholian/" target="_blank" class="linkedin">
+      <i class="fab fa-linkedin"></i> LinkedIn Profile
+    </a>
+  </div>
+</div>
     <div class="bio">
-      <h1>Serly Moghadas Gholian</h1>
+      <h1>Serly's Portfolio</h1>
       <p>
         Hello! 👋🏼 My name is Serly. I’m a PhD candidate in Explainable AI for mobile traffic forecasting, at IMDEA Networks Institute and University of Carlos III of Madrid, Spain.
          My reasearch focuses on mobile networks, spatio-temporal traffic forecasting, and the application of Explainable AI (XAI) to improve the transparency and robustness of deep learning models in network management.
@@ -135,13 +150,6 @@
         <strong> 💼 I will be graduating soon and I’m currently looking for full-time positions in AI/ML research, data science,
            or applied machine learning roles. I'm open to both industry and research positions. </strong>
       </p>
-      <div class="links">
-        <a href="https://github.com/serly93" target="_blank" class="github"><i class="fab fa-github"></i>Github</a>
-        <a href="cv.pdf" class="cv" download><i class="fas fa-file-alt"></i>Download CV</a>
-        <a href="https://scholar.google.com/citations?user=d9KKE0cAAAAJ&hl=en" target="_blank" class="scholar"><i class="fas fa-graduation-cap"></i>Google Scholar</a>
-        <a href="https://www.linkedin.com/in/serly-gholian/" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i>
-          LinkedIn Profile</a>
-      </div>
     </div>
   </div>
 
@@ -166,12 +174,12 @@
     networks,” in 13th IMDEA Networks Workshop: Quantum networks and quantum communications, 2023, pp. 1–1.</p>
     </p>
     </div>
-  </div>
+  <!-- </div>
   <div class="container" id="Personal">
     <div class="bio">
     <h2>Personal</h2>
     </div>
-  </div>
+  </div> -->
   <div class="container" id="contact">
     <div class="bio">
       <h2>Contact</h2>
