--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
       border-radius: 50%;
       box-shadow: 0 4px 16px rgba(255, 255, 255, 0.1);
       flex-shrink: 0;
+      margin: 0 auto;
+      display: block;
     }
     .bio {
       flex: 1;
