--- a/index.html
+++ b/index.html
@@ -123,37 +123,43 @@
 
   <!-- Main Content -->
   <div class="container" id="about">
-    <img src="serly.jpg" alt="Serly Moghadas" class="profile-pic">
-  <div class="links" style="text-align: center;">
-    <a href="https://github.com/serly93" target="_blank" class="github">
-      <i class="fab fa-github"></i> Github
-    </a>
-    <a href="cv.pdf" class="cv" download>
-      <i class="fas fa-file-alt"></i> Download CV
-    </a>
-    <a href="https://scholar.google.com/citations?user=d9KKE0cAAAAJ&hl=en" target="_blank" class="scholar">
-      <i class="fas fa-graduation-cap"></i> Google Scholar
-    </a>
-    <a href="https://www.linkedin.com/in/serly-gholian/" target="_blank" class="linkedin">
-      <i class="fab fa-linkedin"></i> LinkedIn Profile
-    </a>
-  </div>
-</div>
+    <!-- Left column: Image + Links -->
+    <div style="flex-shrink: 0; text-align: center;">
+      <img src="serly.jpg" alt="Serly Moghadas" class="profile-pic">
+      <div class="links">
+        <a href="https://github.com/serly93" target="_blank" class="github">
+          <i class="fab fa-github"></i> Github
+        </a>
+        <a href="cv.pdf" class="cv" download>
+          <i class="fas fa-file-alt"></i> Download CV
+        </a>
+        <a href="https://scholar.google.com/citations?user=d9KKE0cAAAAJ&hl=en" target="_blank" class="scholar">
+          <i class="fas fa-graduation-cap"></i> Google Scholar
+        </a>
+        <a href="https://www.linkedin.com/in/serly-gholian/" target="_blank" class="linkedin">
+          <i class="fab fa-linkedin"></i> LinkedIn Profile
+        </a>
+      </div>
+    </div>
+
+    <!-- Right column: Bio -->
     <div class="bio">
       <h1>Serly's Portfolio</h1>
       <p>
         Hello! 👋🏼 My name is Serly. I’m a PhD candidate in Explainable AI for mobile traffic forecasting, at IMDEA Networks Institute and University of Carlos III of Madrid, Spain.
-         My reasearch focuses on mobile networks, spatio-temporal traffic forecasting, and the application of Explainable AI (XAI) to improve the transparency and robustness of deep learning models in network management.
-        </p>
+        My research focuses on mobile networks, spatio-temporal traffic forecasting, and the application of Explainable AI (XAI) to improve the transparency and robustness of deep learning models in network management.
+      </p>
       <p>
         I’m passionate about building trustworthy and robust AI systems. I’ve presented my work at top-tier conferences and journals including
         IEEE INFOCOM and IEEE Transactions on Mobile Computing.
+      </p>
       <p>
         <strong> 💼 I will be graduating soon and I’m currently looking for full-time positions in AI/ML research, data science,
-           or applied machine learning roles. I'm open to both industry and research positions. </strong>
+        or applied machine learning roles. I'm open to both industry and research positions. </strong>
       </p>
     </div>
   </div>
+
 
 
   <div class="container" id="news">
