--- a/index.html
+++ b/index.html
@@ -130,5 +130,27 @@
     </div>
   </div>
 
+  <!-- Publications Section -->
+<div class="container" id="publications">
+  <div class="bio">
+    <h2>📚 Publications</h2>
+    <ul>
+      <li><strong>S. Moghadas Gholian</strong>, C. Fiandrino, and J. Widmer, “A scalable DNN training framework for traffic forecasting,” IEEE ICMLCN 2025.</li>
+      <li><strong>S. Moghadas Gholian</strong> et al., “DEEXP: Revealing model vulnerabilities...,” IEEE TMC, 2025.</li>
+      <li><strong>S. Moghadas</strong> et al., “Spotting DNN vulnerabilities...,” IEEE INFOCOM 2023.</li>
+      <li><strong>S. Moghadas Gholian</strong> et al., “Exploiting Explainable AI in 5G,” IMDEA Workshop, 2023.</li>
+    </ul>
+  </div>
+</div>
+
+<!-- Contact Section -->
+<div class="container" id="contact">
+  <div class="bio">
+    <h2>📬 Contact</h2>
+    <p>Email: serly [dot] gholian [at] gmail [dot] com</p>
+    <p>Based in Madrid. Open to relocation and remote roles 🌍</p>
+  </div>
+</div>
+
 </body>
 </html>
