--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Serly Moghadas Gholian</title>
+  <title>Serly's Portfolio'</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     body {
@@ -114,7 +114,7 @@
       </div>
     </div>
     <div class="bio">
-      <h1>Serly's Portfolio</h1>
+      <h1>Serly Moghadas Gholian</h1>
       <p>
         Hello! 👋🏼 My name is Serly. I’m a PhD candidate in Explainable AI for mobile traffic forecasting, at IMDEA Networks Institute and University of Carlos III of Madrid, Spain.
         My research focuses on mobile networks, spatio-temporal traffic forecasting, and the application of Explainable AI (XAI) to improve the transparency and robustness of deep learning models in network management.
