--- a/index.html
+++ b/index.html
@@ -135,10 +135,13 @@
   <div class="bio">
     <h2>📚 Publications</h2>
     <ul>
-      <li><strong>S. Moghadas Gholian</strong>, C. Fiandrino, and J. Widmer, “A scalable DNN training framework for traffic forecasting,” IEEE ICMLCN 2025.</li>
-      <li><strong>S. Moghadas Gholian</strong> et al., “DEEXP: Revealing model vulnerabilities...,” IEEE TMC, 2025.</li>
-      <li><strong>S. Moghadas</strong> et al., “Spotting DNN vulnerabilities...,” IEEE INFOCOM 2023.</li>
-      <li><strong>S. Moghadas Gholian</strong> et al., “Exploiting Explainable AI in 5G,” IMDEA Workshop, 2023.</li>
+      <li><strong>S. Moghadas Gholian</strong>, C. Fiandrino, and J. Widmer, “A scalable dnn training framework for traffic forecasting in mobile networks,” IEEE
+        International Conference on Machine Learning for Communication and Networking, IEEE ICMLCN 2025, Barcelona, Spain, May 2025.</li>
+      <li><strong>S. Moghadas Gholian</strong>, C. Fiandrino, N. Vallina-Rodríguez, M. Fiore, and J. Widmer, “Deexp: Revealing model vulnerabilities for
+      spatio-temporal mobile traffic forecasting with explainable ai,” EEE Transactions on Mobile Computing, vol. 24, 2025, pp. 5245–5263.</li>
+      <li><strong>S. Moghadas</strong> C. Fiandrino, A. Collet, G. Attanasio, M. Fiore, and J. Widmer, “Spotting deep neural network vulnerabilities in mobile
+      traffic forecasting with an explainable ai lens,” IEEE Conference on Computer Communications,IEEE INFOCOM 2023, New York, United States, May 2023.</li>
+      <li><strong>S. Moghadas Gholian</strong> et al., “Exploiting Explainable AI in 5G,” IMDEA Workshop, Madrid, Spain, June 2023.</li>
     </ul>
   </div>
 </div>
@@ -148,7 +151,7 @@
   <div class="bio">
     <h2>📬 Contact</h2>
     <p>Email: serly [dot] gholian [at] gmail [dot] com</p>
-    <p>Based in Madrid. Open to relocation and remote roles 🌍</p>
+    <p>Based in Madrid.</p>
   </div>
 </div>
 
