--- a/index.html
+++ b/index.html
@@ -134,15 +134,31 @@
 <div class="container" id="publications">
   <div class="bio">
     <h2>📚 Publications</h2>
-    <ul>
-      <li><strong>S. Moghadas Gholian</strong>, C. Fiandrino, and J. Widmer, “A scalable dnn training framework for traffic forecasting in mobile networks,” IEEE
-        International Conference on Machine Learning for Communication and Networking, IEEE ICMLCN 2025, Barcelona, Spain, May 2025.</li>
-      <li><strong>S. Moghadas Gholian</strong>, C. Fiandrino, N. Vallina-Rodríguez, M. Fiore, and J. Widmer, “Deexp: Revealing model vulnerabilities for
-      spatio-temporal mobile traffic forecasting with explainable ai,” EEE Transactions on Mobile Computing, vol. 24, 2025, pp. 5245–5263.</li>
-      <li><strong>S. Moghadas</strong> C. Fiandrino, A. Collet, G. Attanasio, M. Fiore, and J. Widmer, “Spotting deep neural network vulnerabilities in mobile
-      traffic forecasting with an explainable ai lens,” IEEE Conference on Computer Communications,IEEE INFOCOM 2023, New York, United States, May 2023.</li>
-      <li><strong>S. Moghadas Gholian</strong> et al., “Exploiting Explainable AI in 5G,” IMDEA Workshop, Madrid, Spain, June 2023.</li>
-    </ul>
+  <ul>
+    <li>
+      <a href="https://dspace.networks.imdea.org/bitstream/handle/20.500.12761/1908/authors%27%20version.pdf?sequence=2&isAllowed=y" target="_blank">[PDF]</a>
+      <strong>S. Moghadas Gholian</strong>, C. Fiandrino, and J. Widmer, “A scalable dnn training framework for traffic forecasting in mobile networks,” IEEE
+      International Conference on Machine Learning for Communication and Networking, IEEE ICMLCN 2025, Barcelona, Spain, May 2025.
+    </li>
+
+    <li>
+      <a href="https://dspace.networks.imdea.org/bitstream/handle/20.500.12761/1889/2025_moghadas_tmc_deexp.pdf?sequence=1&isAllowed=y" target="_blank">[PDF]</a>
+      <strong>S. Moghadas Gholian</strong>, C. Fiandrino, N. Vallina-Rodríguez, M. Fiore, and J. Widmer, “Deexp: Revealing model vulnerabilities for
+      spatio-temporal mobile traffic forecasting with explainable ai,” EEE Transactions on Mobile Computing, vol. 24, 2025, pp. 5245–5263.
+    </li>
+
+    <li>
+      <a href="https://dspace.networks.imdea.org/bitstream/handle/20.500.12761/1662/Infocom2023_Claudio%20xai_aml-mtp-dspace.pdf?sequence=1&isAllowed=y" target="_blank">[PDF]</a>
+      <strong>S. Moghadas</strong>, C. Fiandrino, A. Collet, G. Attanasio, M. Fiore, and J. Widmer, “Spotting deep neural network vulnerabilities in mobile
+      traffic forecasting with an explainable ai lens,” IEEE Conference on Computer Communications, IEEE INFOCOM 2023, New York, United States, May 2023.
+    </li>
+
+    <li>
+      <a href="https://dspace.networks.imdea.org/bitstream/handle/20.500.12761/1630/IMDEA-Scientific%20Poster-V-A1.pdf?sequence=1&isAllowed=y" target="_blank">[PDF]</a>
+      <strong>S. Moghadas Gholian</strong> et al., “Exploiting Explainable AI in 5G,” IMDEA Workshop, Madrid, Spain, June 2023.
+    </li>
+  </ul>
+
   </div>
 </div>
 
