--- a/index.html
+++ b/index.html
@@ -117,21 +117,6 @@
     <a href="#contact">Contact</a>
   </nav>
 
-  <!-- News Section -->
-  <div class="container" id="news">
-    <div class="bio">
-      <h2>📰 News</h2>
-      <ul>
-        <li>
-          I won the <strong>Best Student Paper Award</strong> at the IEEE ICMLCN 2025 in Barcelona.
-        </li>
-        <li>
-          I also won the <strong>3MT (Three-Minute Thesis)</strong> competition.
-        </li>
-      </ul>
-    </div>
-  </div>
-
   <!-- About Me Section -->
   <div class="container" id="about">
     <div class="left-side">
@@ -157,6 +142,21 @@
         <strong> 💼 I will be graduating soon and I’m currently looking for full-time positions in AI/ML research, data science,
         or applied machine learning roles. I'm open to both industry and research positions. </strong>
       </p>
+    </div>
+  </div>
+
+    <!-- News Section -->
+  <div class="container" id="news">
+    <div class="bio">
+      <h2>📰 News</h2>
+      <ul>
+        <li>
+          I won the <strong>Best Student Paper Award</strong> at the IEEE ICMLCN 2025 on 26-29th of May held in Barcelona.
+        </li>
+        <li>
+          I also won the <strong>3MT (Three-Minute Thesis)</strong> competition.
+        </li>
+      </ul>
     </div>
   </div>
 
