--- a/index.html
+++ b/index.html
@@ -145,16 +145,24 @@
     </div>
   </div>
 
-    <!-- News Section -->
+  <!-- News Section -->
   <div class="container" id="news">
     <div class="bio">
       <h2>📰 News</h2>
       <ul>
         <li>
-          I won the <strong>Best Student Paper Award</strong> at the IEEE ICMLCN 2025 on 26-29th of May held in Barcelona.
+          I won the <strong>
+            <a href="https://icmlcn2025.ieee-icmlcn.org/" target="_blank" rel="noopener">
+              Best Student Paper Award
+            </a>
+          </strong> at IEEE ICMLCN 2025 in Barcelona.
         </li>
         <li>
-          I also won the <strong>3MT (Three-Minute Thesis)</strong> competition.
+          I also won the <strong>
+            <a href="https://icmlcn2025.ieee-icmlcn.org/program/3mt-competition" target="_blank" rel="noopener">
+              3MT (Three-Minute Thesis)
+            </a>
+          </strong> competition.
         </li>
       </ul>
     </div>
