--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <h2>📰 News</h2>
       <ul>
         <li>
-          I won the <strong>
+          Our paper "A Scalable DNN Training Framework for Traffic Forecasting in Mobile Networks" won the <strong>
             <a href="https://icmlcn2025.ieee-icmlcn.org/" target="_blank" rel="noopener">
               Best Student Paper Award
             </a>
