--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <a href="https://icmlcn2025.ieee-icmlcn.org/program/3mt-competition" target="_blank" rel="noopener">
               3MT (Three-Minute Thesis)
             </a>
-          </strong> competition.
+          </strong> competition at ICMLCN2025.
         </li>
       </ul>
     </div>
