--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
         IEEE INFOCOM and IEEE Transactions on Mobile Computing.
       </p>
       <p>
-        <strong> 💼 I will be graduating soon and I’m currently looking for full-time positions in AI/ML research, data science,
-        or applied machine learning roles. I'm open to both industry and research positions. </strong>
+        <strong> 💼 I’m currently looking for full-time positions in AI/ML research, data science,
+        or applied machine learning roles. </strong>
       </p>
     </div>
   </div>
