--- a/index.html
+++ b/index.html
@@ -132,7 +132,11 @@
       <img src="serly.jpg" alt="Serly Moghadas" class="profile-pic">
       <div class="icon-links">
         <a href="https://github.com/serly93" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="cv.pdf" download><i class="fas fa-file-alt"></i></a>
+        <!-- <a href="cv.pdf" download><i class="fas fa-file-alt"></i></a> -->
+        <a href="cv.pdf" download onclick="gtag('event', 'download_cv', { 'event_category': 'CV', 'event_label': 'CV Download' });">
+          <i class="fas fa-file-alt"></i>
+        </a>
+
         <a href="https://scholar.google.com/citations?user=d9KKE0cAAAAJ&hl=en" target="_blank"><i class="fas fa-graduation-cap"></i></a>
         <a href="https://www.linkedin.com/in/serly-gholian/" target="_blank"><i class="fab fa-linkedin"></i></a>
       </div>
