--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
     <div class="bio">
       <h1>Serly Moghadas Gholian</h1>
       <p>
-        Hello! 👋🏼 My name is Serly. I’m a PhD candidate in Explainable AI for mobile traffic forecasting, at IMDEA Networks Institute and University of Carlos III of Madrid, Spain.
-        My research focuses on mobile networks, spatio-temporal traffic forecasting, and the application of Explainable AI (XAI) to improve the transparency and robustness of deep learning models in network management.
+        Hello! 👋🏼 I’m Serly, a PhD candidate specializing in Explainable AI and data-driven forecasting.
+        My work bridges deep learning with real-world applications, focusing on time series modeling, anomaly detection, and robust model design, particularly in mobile networks.
       </p>
       <p>
-        I’m passionate about building trustworthy and robust AI systems. I’ve presented my work at top-tier conferences and journals including
-        IEEE INFOCOM and IEEE Transactions on Mobile Computing.
+        I have hands-on experience in developing interpretable AI systems and have tackled challenges like spatio-temporal prediction, traffic pattern analysis, and model transparency using techniques like SHAP, Grad-CAM and LRP.
+       I'm especially passionate about transforming complex datasets into actionable insights.
       </p>
       <p>
         <strong> 💼 I’m currently looking for full-time positions in AI/ML research, data science,
