--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <h1>Serly Moghadas Gholian</h1>
       <p>
         Hello! 👋🏼 I’m Serly, a PhD candidate specializing in Explainable AI and data-driven forecasting.
-        My work bridges deep learning with real-world applications, focusing on time series modeling, anomaly detection, and robust model design, particularly in mobile networks.
+        My work bridges deep learning with real-world applications, focusing on time series modeling and scalable model design, particularly in mobile networks.
       </p>
       <p>
         I have hands-on experience in developing interpretable AI systems and have tackled challenges like spatio-temporal prediction, traffic pattern analysis, and model transparency using techniques like SHAP, Grad-CAM and LRP.
