--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
        I'm especially passionate about transforming complex datasets into actionable insights.
       </p>
       <p>
+    📄 You can also <a href="cv.pdf" target="_blank" rel="noopener" style="color:#1e90ff; text-decoration:underline;">
+      download my CV (PDF)
+      </a>.
+      </p>
+      <p>
         <strong> 💼 I’m currently looking for full-time positions in AI/ML research, data science,
         or applied machine learning roles. </strong>
       </p>
